# suitesparse-metis-for-windows

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  FindSuiteSparse.cmake  LICENSE.md  README.md  README.txt  SuiteSparseConfig.cmake.in  SuiteSparseConfigForInstall.cmake  SuiteSparseConfigForInstall.cmake.in  UseSuiteSparseForInstall.cmake.in  appveyor.yml  checkGetSuiteSparse.cmake  conanfile.py
SuiteSparse/: .gitignore  CMakeLists.txt  ChangeLog  makefile2wrappers.py
SuiteSparse/AMD/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/AMD/SourceWrappers/: amd_global.c  amd_i_1.o.c  amd_i_2.o.c  amd_i_aat.o.c  amd_i_control.o.c  amd_i_defaults.o.c  amd_i_dump.o.c  amd_i_info.o.c  amd_i_order.o.c  amd_i_post_tree.o.c  amd_i_postorder.o.c  amd_i_preprocess.o.c  amd_i_valid.o.c  amd_l_1.o.c  amd_l_2.o.c  amd_l_aat.o.c  amd_l_control.o.c  amd_l_defaults.o.c  amd_l_dump.o.c  amd_l_info.o.c  amd_l_order.o.c  amd_l_post_tree.o.c  amd_l_postorder.o.c  amd_l_preprocess.o.c  amd_l_valid.o.c
SuiteSparse/BTF/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/BTF/SourceWrappers/: btf_l_maxtrans.o.c  btf_l_order.o.c  btf_l_strongcomp.o.c  btf_maxtrans.o.c  btf_order.o.c  btf_strongcomp.o.c
SuiteSparse/CAMD/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/CAMD/SourceWrappers/: camd_global.c  camd_i_1.o.c  camd_i_2.o.c  camd_i_aat.o.c  camd_i_control.o.c  camd_i_defaults.o.c  camd_i_dump.o.c  camd_i_info.o.c  camd_i_order.o.c  camd_i_postorder.o.c  camd_i_preprocess.o.c  camd_i_valid.o.c  camd_l_1.o.c  camd_l_2.o.c  camd_l_aat.o.c  camd_l_control.o.c  camd_l_defaults.o.c  camd_l_dump.o.c  camd_l_info.o.c  camd_l_order.o.c  camd_l_postorder.o.c  camd_l_preprocess.o.c  camd_l_valid.o.c
SuiteSparse/CCOLAMD/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/CCOLAMD/SourceWrappers/: ccolamd.c  ccolamd_global.c  ccolamd_l.o.c
SuiteSparse/CHOLMOD/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/CHOLMOD/GPU/: t_cholmod_gpu.c
SuiteSparse/CHOLMOD/Include/: cholmod.h  cholmod_core.h  cholmod_gpu.h
SuiteSparse/CHOLMOD/Partition/: cholmod_metis.c
SuiteSparse/CHOLMOD/SourceWrappers/: cholmod_aat.o.c  cholmod_add.o.c  cholmod_amd.o.c  cholmod_analyze.o.c  cholmod_band.o.c  cholmod_camd.o.c  cholmod_ccolamd.o.c  cholmod_change_factor.o.c  cholmod_check.o.c  cholmod_colamd.o.c  cholmod_common.o.c  cholmod_complex.o.c  cholmod_copy.o.c  cholmod_csymamd.o.c  cholmod_dense.o.c  cholmod_drop.o.c  cholmod_error.o.c  cholmod_etree.o.c  cholmod_factor.o.c  cholmod_factorize.o.c  cholmod_gpu.o.c  cholmod_gpu_kernels.o.c  cholmod_horzcat.o.c  cholmod_l_aat.o.c  cholmod_l_add.o.c  cholmod_l_amd.o.c  cholmod_l_analyze.o.c  cholmod_l_band.o.c  cholmod_l_camd.o.c  cholmod_l_ccolamd.o.c  cholmod_l_change_factor.o.c  cholmod_l_check.o.c  cholmod_l_colamd.o.c  cholmod_l_common.o.c  cholmod_l_complex.o.c  cholmod_l_copy.o.c  cholmod_l_csymamd.o.c  cholmod_l_dense.o.c  cholmod_l_drop.o.c  cholmod_l_error.o.c  (+62 more)
SuiteSparse/COLAMD/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/COLAMD/SourceWrappers/: colamd.c  colamd_global.c  colamd_l.o.c
SuiteSparse/CXSparse/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/CXSparse/Include/: cs.h
SuiteSparse/CXSparse/SourceWrappers/: cs_add_ci.o.c  cs_add_cl.o.c  cs_add_di.o.c  cs_add_dl.o.c  cs_amd_ci.o.c  cs_amd_cl.o.c  cs_amd_di.o.c  cs_amd_dl.o.c  cs_chol_ci.o.c  cs_chol_cl.o.c  cs_chol_di.o.c  cs_chol_dl.o.c  cs_cholsol_ci.o.c  cs_cholsol_cl.o.c  cs_cholsol_di.o.c  cs_cholsol_dl.o.c  cs_compress_ci.o.c  cs_compress_cl.o.c  cs_compress_di.o.c  cs_compress_dl.o.c  cs_convert.o.c  cs_counts_ci.o.c  cs_counts_cl.o.c  cs_counts_di.o.c  cs_counts_dl.o.c  cs_cumsum_ci.o.c  cs_cumsum_cl.o.c  cs_cumsum_di.o.c  cs_cumsum_dl.o.c  cs_dfs_ci.o.c  cs_dfs_cl.o.c  cs_dfs_di.o.c  cs_dfs_dl.o.c  cs_dmperm_ci.o.c  cs_dmperm_cl.o.c  cs_dmperm_di.o.c  cs_dmperm_dl.o.c  cs_droptol_ci.o.c  cs_droptol_cl.o.c  cs_droptol_di.o.c  (+165 more)
SuiteSparse/GPUQREngine/: CMakeLists.txt
SuiteSparse/GPUQREngine/Include/: GPUQREngine_BucketList.hpp  GPUQREngine_Front.hpp  GPUQREngine_LLBundle.hpp  GPUQREngine_Scheduler.hpp
SuiteSparse/GraphBLAS/: CMakeLists.txt
SuiteSparse/KLU/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/KLU/SourceWrappers/: klu_analyze.o.c  klu_analyze_given.o.c  klu_d.o.c  klu_d_diagnostics.o.c  klu_d_dump.o.c  klu_d_extract.o.c  klu_d_factor.o.c  klu_d_free_numeric.o.c  klu_d_kernel.o.c  klu_d_refactor.o.c  klu_d_scale.o.c  klu_d_solve.o.c  klu_d_sort.o.c  klu_d_tsolve.o.c  klu_defaults.o.c  klu_free_symbolic.o.c  klu_l.o.c  klu_l_analyze.o.c  klu_l_analyze_given.o.c  klu_l_defaults.o.c  klu_l_diagnostics.o.c  klu_l_dump.o.c  klu_l_extract.o.c  klu_l_factor.o.c  klu_l_free_numeric.o.c  klu_l_free_symbolic.o.c  klu_l_kernel.o.c  klu_l_memory.o.c  klu_l_refactor.o.c  klu_l_scale.o.c  klu_l_solve.o.c  klu_l_sort.o.c  klu_l_tsolve.o.c  klu_memory.o.c  klu_z.o.c  klu_z_diagnostics.o.c  klu_z_dump.o.c  klu_z_extract.o.c  klu_z_factor.o.c  klu_z_free_numeric.o.c  (+18 more)
SuiteSparse/LDL/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/LDL/SourceWrappers/: ldl.o.c  ldll.o.c
SuiteSparse/Mongoose/: CMakeLists.txt
SuiteSparse/SPQR/: CMakeLists.txt
SuiteSparse/SPQR/Include/: SuiteSparseQR.hpp
SuiteSparse/SuiteSparse_GPURuntime/: CMakeLists.txt
SuiteSparse/SuiteSparse_config/: CMakeLists.txt  Makefile  SuiteSparse_config.h
SuiteSparse/UMFPACK/: CMakeLists.txt  makefile2wrappers.txt
SuiteSparse/UMFPACK/SourceWrappers/: umf_di_assemble.o.c  umf_di_assemble_fixq.o.c  umf_di_blas3_update.o.c  umf_di_build_tuples.o.c  umf_di_create_element.o.c  umf_di_dump.o.c  umf_di_extend_front.o.c  umf_di_garbage_collection.o.c  umf_di_get_memory.o.c  umf_di_grow_front.o.c  umf_di_init_front.o.c  umf_di_kernel.o.c  umf_di_kernel_init.o.c  umf_di_kernel_wrapup.o.c  umf_di_lhsolve.o.c  umf_di_local_search.o.c  umf_di_lsolve.o.c  (+300 more)
SuiteSparse/metis-5.1.0/: CMakeLists.txt
example-project/: CMakeLists.txt  cholmod-test.c
example-projects/cholmod/: CMakeLists.txt
example-projects/spqr/: CMakeLists.txt  spqr-test.cpp
metis/libmetis/: CMakeLists.txt  metislib.h
(+32 files in other folders)
